Remove hardcoded localhost/port values and move to configurable static images-server-url